website/scss/imports/responsive.scss
@media (min-width: 1200px) {
  .content-container {
    width: 1170px;
  }
}

@media (min-width: 992px) and (max-width: 1200px) {
  .content-container {
    width: 970px;
  }
}

@media (min-width: 768px) and (max-width: 992px) {
  .content-container {
    width: 750px;
  }
}

@media (max-width: 768px) {
  .section-header:not(.clip-always-visible) {

    &:after {
      visibility: hidden;
    }
  }

  .section-body > .shadow {
    visibility: hidden;
  }

  #abilities .row-2, #contact .row-2 {
    width: 100% !important;
  }
}

@media (max-width: 616px) {
  .section-header {
    text-shadow: 0 0 0 $dark !important;

    h1 {
      font-size: 30px !important;
      line-height: 30px !important;
    }

    h2 {
      font-size: 15px !important;
      line-height: 15px !important;
    }
  }

  section.central-section .section-body {
    border-left: 0 !important;
    border-right: 0 !important;
    border-radius: 0 !important;

    &:before {
      border-left: 0;
      border-right: 0;
    }
  }
}

@media (max-width: 450px) {
  .big-header {
    padding: 10px 15px !important;
  }
}

